@@ -2,7 +2,7 @@
 <b>Note:</b> If you don't wish to appear on this list when making a donation, please tell me.
 
 2008:
-* Guillaume Lovet
+* Spike Spiegal
 * Mark Hashimoto
 * Anirudh Sanjeev
 * Ted Pavlic
@@ -11,7 +11,7 @@
 * Gabriel Gellner 
 * Marco Candrian
 * Ovidiu Curcan
-* Ivo-Jose Jimenez-Ramos
+* Ivo-Jose Jimenez-Ramos (2x)
 * Andrew Pantyukhin
 * Kurtis Rader
 
