@@ -286,8 +286,24 @@ liberator.CommandLine = function () //{{{
         "Items which are completed at the :[tab]open prompt",
         "charlist", "sfbh",
         {
-            validator: function (value) { return !/[^sfbhg]/.test(value); }
+            validator: function (value) { return !/[^sfbhS]/.test(value); }
         });
+
+    liberator.options.add(["suggestengines"],
+         "Engine Alias which has a feature of suggest",
+         "stringlist", "google",
+         {
+         	validator: function (value)
+         	{
+         		var ss = Components.classes["@mozilla.org/browser/search-service;1"]
+         		           .getService(Components.interfaces.nsIBrowserSearchService);
+         		return value.split(",").every(function (item)
+         		{
+         			var e = ss.getEngineByAlias(item);
+         			return (e && e.supportsResponseType("application/x-suggestions+json")) ? true : false;
+         		});
+         	}
+         });
 
     liberator.options.add(["showmode", "smd"], 
         "Show the current mode in the command line",
